--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,17 @@ dependencies = [
     "equinox>=0.11.8",
     "flatbuffers>=24.3.25",
     "flax==0.10.2",
-    "fsspec[gcs]",
+    "fsspec[gcs]>=2024.6.0",
     "gym-aloha>=0.1.1",
     "imageio>=2.36.1",
     "jax[cuda12]==0.5.0",
     "jaxtyping==0.2.36",
+    "lerobot",
     "ml_collections==1.0.0",
     "numpy>=1.26.4",
     "numpydantic>=1.6.6",
+    "opencv-python>=4.10.0.84",
+    "openpi-client",
     "orbax-checkpoint==0.11.1",
     "pillow>=11.0.0",
     "s3fs>=2024.9.0",
@@ -53,13 +56,16 @@ dev = [
 ]
 
 
+[tool.uv.sources]
+openpi-client = { workspace = true }
+lerobot = { git = "https://github.com/huggingface/lerobot", rev = "6674e368249472c91382eb54bb8501c94c7f0c56" }
 
 [tool.uv.workspace]
 members = ["packages/*"]
 
 [tool.ruff]
 line-length = 120
-target-version = "py310"
+target-version = "py311"
 extend-exclude = ["docker", "third_party"]
 
 [tool.ruff.lint]
